Rename aws mysql service to rds_mysql, with plan name 10mb
[#48096147]

--- a/templates/cf-aws-template.yml.erb
+++ b/templates/cf-aws-template.yml.erb
@@ -167,8 +167,8 @@ properties:
 
   service_plans:
     rds_mysql:
-      "free":
-        description: "Shared service instance, 1MB memory, 10MB storage, 10 connections"
+      "10mb":
+        description: "Shared service, 10MB storage, 10 connections"
         job_management:
           high_water: 900
           low_water: 100
