--- a/jobs/rds_mysql_gateway/templates/mysql_gateway.yml.erb
+++ b/jobs/rds_mysql_gateway/templates/mysql_gateway.yml.erb
@@ -22,7 +22,7 @@ mbus: <%= nats %>
 cloud_controller_uri: <%= properties.cc.srv_api_uri %>
 
 service:
-  name: 'mysql'
+  name: 'rds_mysql'
   version: 'n/a'
   description: 'RDS MySQL by Amazon'
   provider: aws
