--- a/jobs/rds_mysql_gateway/templates/mysql_gateway.yml.erb
+++ b/jobs/rds_mysql_gateway/templates/mysql_gateway.yml.erb
@@ -58,7 +58,7 @@ uaa_client_auth_credentials:
   username: <%= properties.uaa_client_auth_credentials.username %>
   password: "<%= properties.uaa_client_auth_credentials.password %>"
 service_auth_tokens:
-  mysql_aws: "<%= gateway.token %>"
+  rds_mysql_aws: "<%= gateway.token %>"
 
 token: "<%= gateway.token %>"
 logging:
