Use services network for compiles

--- a/templates/cf-aws-template.yml.erb
+++ b/templates/cf-aws-template.yml.erb
@@ -16,7 +16,7 @@ releases:
 
 compilation:
   workers: 3
-  network: cf
+  network: services
   reuse_compilation_vms: true
   cloud_properties:
     instance_type: c1.medium
