Fix NATS network

--- a/templates/cf-aws-template.yml.erb
+++ b/templates/cf-aws-template.yml.erb
@@ -131,7 +131,7 @@ properties:
   domain: <%= find("properties.domain") %>
 
   networks:
-    services: services
+    services: services1
 
   nats:
     user: nats
