--- a/templates/cf-services-release-template.yml.erb
+++ b/templates/cf-services-release-template.yml.erb
@@ -264,6 +264,7 @@ properties:
         configuration:
           capacity: 2000
           max_db_size: 10
+          max_long_tx: 30
           max_clients: 2   # largest RDS instance defaults to 5800 connections max total
       "cfinternal":
         description: "Shared CloudFoundry internal plan, 50GB storage, 50 connections"
@@ -273,6 +274,7 @@ properties:
         configuration:
           capacity: 20
           max_db_size: 50000
+          max_long_tx: 30
           max_long_query: 60
           max_clients: 50
 
