--- a/templates/cf-services-release-template.yml.erb
+++ b/templates/cf-services-release-template.yml.erb
@@ -257,7 +257,8 @@ properties:
   service_plans:
     rds_mysql:
       "10mb":
-        description: "Shared service instance, 10MB storage, 2 connections"
+        description: "Shared service instance, 10MB storage, 3 connections"
+        extra: '{"cost":5.0,"bullets":[{"content":"10 MB storage"},{"content":"3 concurrent connections"},{"content":"Shared server"}]}'
         job_management:
           high_water: 1500
           low_water: 10
@@ -265,9 +266,10 @@ properties:
           capacity: 2000
           max_db_size: 10
           max_long_tx: 30
-          max_clients: 2   # largest RDS instance defaults to 5800 connections max total
+          max_clients: 3   # largest RDS instance defaults to 5800 connections max total
       "cfinternal":
         description: "Shared CloudFoundry internal plan, 50GB storage, 50 connections"
+        extra: '{"cost":0.0,"bullets":[{"content":"For internal use"},{"content":"50 GB storage"},{"content":"50 concurrent connections"},{"content":"Shared server"}]}'
         job_management:
           high_water: 10
           low_water: 1
