RDS publishes unique_id, Bump src/services:
David Stevenson and Phan Le (5):
      Extra info from MPGW specs
      Wait for process to be killed
      Trying to fix the build
      Kill dangling fake app direct process before starting a new one
      Bump vcap_services_base, int test for RDS extra and unique_id

David Stevenson, Matt Royal and Phan Le (1):
      Integration test for unprovision appdirect service

Jesse Zhang and Phan Le (1):
      Still trying to fix the build, could not produce locally

--- a/jobs/rds_mysql_gateway/templates/mysql_gateway.yml.erb
+++ b/jobs/rds_mysql_gateway/templates/mysql_gateway.yml.erb
@@ -23,6 +23,7 @@ cloud_controller_uri: <%= properties.cc.srv_api_uri %>
 
 service:
   name: 'rds_mysql'
+  unique_id: '17523a3a-44fe-4c59-a962-af6cd06e0f92'
   version: 'n/a'
   description: 'RDS MySQL by Amazon'
   provider: aws
@@ -36,7 +37,9 @@ service:
     <% plan_description = plan_info.description || "#{plan} plan" %>
     <% plan_free_flag   = plan_info.free %>
     <% extra            = plan_info.extra %>
+    <% unique_id        = plan_info.unique_id %>
     <%= "'#{plan}':" %>
+      unique_id: <%= "'#{unique_id}'" %>
       description: <%= "'#{plan_description}'" %>
       free: <%= !plan_free_flag.nil? && plan_free_flag.to_s || "true" %>
       extra: <%= "'#{extra}'" %>
