--- a/templates/cf-aws-template.yml.erb
+++ b/templates/cf-aws-template.yml.erb
@@ -141,6 +141,7 @@ properties:
   service_plans:
     rds_mysql:
       "10mb":
+        unique_id: 'a9a5f47c-134d-48e1-94db-26111b03a55f'
         description: "Shared service, 10MB storage, 10 connections"
         extra: '{"cost":0.0,"bullets":[{"content":"10 MB storage"},{"content":"10 connections"}]}'
         job_management:
