Static port for RDS gateway

--- a/jobs/rds_mysql_gateway/templates/mysql_gateway.yml.erb
+++ b/jobs/rds_mysql_gateway/templates/mysql_gateway.yml.erb
@@ -18,6 +18,7 @@ cc_api_version = gateway.cc_api_version || "v1"
 %>
 index: <%= spec.index %>
 mbus: <%= nats %>
+port: 33884
 
 cloud_controller_uri: <%= properties.cc.srv_api_uri %>
 
