--- a/templates/cf-services-release-template.yml.erb
+++ b/templates/cf-services-release-template.yml.erb
@@ -56,7 +56,7 @@ networks:
 resource_pools:
 - name: services-small
   network: services1
-  size: 4
+  size: 3
   stemcell:
     name: bosh-stemcell
     version: latest
@@ -66,6 +66,7 @@ resource_pools:
 
 jobs:
 - name: rds_mysql_gateway
+  release: cf-services-release
   template:
   - rds_mysql_gateway
   instances: 1
@@ -86,116 +87,8 @@ jobs:
       version_aliases:
         current: "n/a"
 
-<% if find("properties")["marketplace_gateway"] && find("properties")["marketplace_gateway"]["service_auth_tokens"] %>
-- name: marketplace_gateway
-  template:
-  - marketplace_gateway
-  instances: 1
-  resource_pool: services-small
-  networks:
-  - name: services1
-    static_ips:
-    - <%= ip( 0, 'services1.static') %>
-  properties:
-    uaa_client_id: "vmc"
-    uaa_endpoint: https://uaa.<%= find("properties.domain") %>
-    uaa_client_auth_credentials:
-      username: <%= services_userid || "services" %>
-      password: <%= services_password || random_string(12, :services) %>
-    marketplace_gateway:
-      marketplace: appdirect
-      cc_api_version: v2
-      logging_level: debug
-      uaa_client_id: "vmc"
-      uaa_endpoint: https://uaa.<%= find("properties.domain") %>
-      uaa_client_auth_credentials:
-        username: <%= services_userid || "services" %>
-        password: <%= services_password || random_string(12, :services) %>
-      service_auth_tokens:
-        mongolab-dev_objectlabs: <%= find("properties.marketplace_gateway.service_auth_tokens.mongolab-dev_objectlabs") %>
-        sendgrid-dev_sendgrid: <%= find("properties.marketplace_gateway.service_auth_tokens.sendgrid-dev_sendgrid") %>
-        sendgrid_sendgrid: <%= find("properties.marketplace_gateway.service_auth_tokens.sendgrid_sendgrid") %>
-        redistogo-dev_redistogo: <%= find("properties.marketplace_gateway.service_auth_tokens.redistogo-dev_redistogo") %>
-        dummy_dummy: <%= find("properties.marketplace_gateway.service_auth_tokens.dummy_dummy") %>
-        dummy-dev_dummy: <%= find("properties.marketplace_gateway.service_auth_tokens.dummy-dev_dummy") %>
-        newrelic_newrelic: <%= find("properties.marketplace_gateway.service_auth_tokens.newrelic_newrelic") %>
-        urbanairship_urbanairship: <%= find("properties.marketplace_gateway.service_auth_tokens.urbanairship_urbanairship") %>
-        treasuredata_treasuredata: <%= find("properties.marketplace_gateway.service_auth_tokens.treasuredata_treasuredata") %>
-        blazemeter_blazemeter: <%= find("properties.marketplace_gateway.service_auth_tokens.blazemeter_blazemeter") %>
-        searchify_searchify: <%= find("properties.marketplace_gateway.service_auth_tokens.searchify_searchify") %>
-        cloudamqp-dev_cloudamqp: <%= find("properties.marketplace_gateway.service_auth_tokens.cloudamqp-dev_cloudamqp") %>
-      external_uri: http://appdirect-mpgw.<%= find("properties.domain") %>
-      refresh_interval: 300
-      node_timeout: 15
-      whitelist:
-      - mongodb_mongolab-dev
-      - smtp_sendgrid-dev
-      - SendGrid_SendGrid
-      - redis_redistogo-dev
-      - dummy_dummy
-      - dummy_dummy-dev
-      - New Relic_New Relic
-      - Urban Airship_Urban Airship
-      - Treasure Data_Treasure Data
-      - BlazeMeter_BlazeMeter
-      - Searchify_Searchify
-      - rabbitmq_cloudamqp-dev
-      service_mappings:
-      - cc_name: searchify
-        cc_provider: searchify
-        ad_name: Searchify
-        ad_provider: Searchify
-      - cc_name: cloudamqp-dev
-        cc_provider: cloudamqp
-        ad_name: rabbitmq
-        ad_provider: cloudamqp-dev
-      - cc_name: mongolab-dev
-        cc_provider: objectlabs
-        ad_name: mongodb
-        ad_provider: mongolab-dev
-      - cc_name: sendgrid-dev
-        cc_provider: sendgrid
-        ad_name: smtp
-        ad_provider: sendgrid-dev
-      - cc_name: sendgrid
-        cc_provider: sendgrid
-        ad_name: SendGrid
-        ad_provider: SendGrid
-      - cc_name: redistogo-dev
-        cc_provider: redistogo
-        ad_name: redis
-        ad_provider: redistogo-dev
-      - cc_name: dummy
-        cc_provider: dummy
-        ad_name: dummy
-        ad_provider: dummy
-      - cc_name: dummy-dev
-        cc_provider: dummy
-        ad_name: dummy
-        ad_provider: dummy-dev
-      - cc_name: newrelic
-        cc_provider: newrelic
-        ad_name: New Relic
-        ad_provider: New Relic
-      - cc_name: urbanairship
-        cc_provider: urbanairship
-        ad_name: Urban Airship
-        ad_provider: Urban Airship
-      - cc_name: treasuredata
-        cc_provider: treasuredata
-        ad_name: Treasure Data
-        ad_provider: Treasure Data
-      - cc_name: blazemeter
-        cc_provider: blazemeter
-        ad_name: BlazeMeter
-        ad_provider: BlazeMeter
-      appdirect:
-        endpoint: "https://dev3cloudfoundry.appdirect.com"
-        key: <%= find("properties.marketplace_gateway.appdirect.key") %>
-        secret: <%= find("properties.marketplace_gateway.appdirect.secret") %>
-<% end %>
-
 - name: mysql_node_10mb
+  release: cf-services-release
   template:
   - mysql_node_external
   instances: 1
@@ -215,6 +108,7 @@ jobs:
         password: "<%= role['password'] %>"
 
 - name: mysql_node_cfinternal
+  release: cf-services-release
   template:
   - mysql_node_external
   instances: 1
@@ -283,4 +177,7 @@ properties:
           max_long_tx: 30
           max_long_query: 60
           max_clients: 50
+
+  uaa:
+    <%= find("properties.uaa").to_yaml.split("\n")[1..-1].map{|line| " " * 4 + line}.join("\n").gsub(/\A\s{4}/, "") %>
 
