Use bosh-stemcell 644, until bosh team notifies us

--- a/templates/cf-services-release-template.yml.erb
+++ b/templates/cf-services-release-template.yml.erb
@@ -59,7 +59,7 @@ resource_pools:
   size: 3
   stemcell:
     name: bosh-stemcell
-    version: latest
+    version: 644
   cloud_properties:
     instance_type: m1.small
     availability_zone: <%= find('properties.template_only.aws.availability_zone') %>
