--- a/jobs/rds_mysql_gateway/templates/mysql_gateway.yml.erb
+++ b/jobs/rds_mysql_gateway/templates/mysql_gateway.yml.erb
@@ -1,6 +1,6 @@
 ---
 <%
-service = "rds-mysql"
+service = "rds_mysql"
 gateway = eval("properties.#{service}_gateway")
 plan_enabled = properties.service_plans && properties.service_plans.send(service.to_sym)
 plan_mgmt = plan_enabled && properties.service_plans.send(service.to_sym)
