--- a/jobs/rds_mysql_gateway/templates/mysql_gateway.yml.erb
+++ b/jobs/rds_mysql_gateway/templates/mysql_gateway.yml.erb
@@ -51,7 +51,7 @@ service:
     <%= "'#{pf}': #{plan_mgmt.send(pf).configuration.cf_plan_id}" %>
 <% end if plan_mgmt %>
   tags: ['relational']
-  timeout: <%= properties.rds-mysql_gateway.service_timeout || 10 %>
+  timeout: <%= properties.#{service}.service_timeout || 10 %>
   version_aliases: {}
 
 <% if gateway.ip_route %>
@@ -71,16 +71,16 @@ service_auth_tokens:
 
 token: "<%= gateway.token %>"
 logging:
-  file: /var/vcap/sys/log/rds-mysql_gateway/mysql_gateway.log
+  file: /var/vcap/sys/log/rds_mysql_gateway/mysql_gateway.log
   level: debug
   <% if properties.syslog_aggregator %>
-  syslog: vcap.rds-mysql_gateway
+  syslog: vcap.rds_mysql_gateway
   <% end %>
 
 
 node_timeout: <%= gateway.node_timeout || 8 %>
 
-pid: /var/vcap/sys/run/rds-mysql_gateway/mysql_gateway.pid
+pid: /var/vcap/sys/run/rds_mysql_gateway/mysql_gateway.pid
 z_interval: <%= gateway.z_interval || 30 %>
 check_orphan_interval: <%= gateway.check_orphan_interval || -1 %>
 double_check_orphan_interval: <%= gateway.double_check_orphan_interval || 300 %>
