Revert "Attempt to fix broken services deploy."
This reverts commit 9f76a4b6b639d4244c1d48856038e32c97a35ae5.

--- a/jobs/rds_mysql_gateway/templates/mysql_gateway.yml.erb
+++ b/jobs/rds_mysql_gateway/templates/mysql_gateway.yml.erb
@@ -1,6 +1,6 @@
 ---
 <%
-service = "rds_mysql"
+service = "rds-mysql"
 gateway = eval("properties.#{service}_gateway")
 plan_enabled = properties.service_plans && properties.service_plans.send(service.to_sym)
 plan_mgmt = plan_enabled && properties.service_plans.send(service.to_sym)
