--- a/jobs/rds_mysql_gateway/templates/mysql_gateway.yml.erb
+++ b/jobs/rds_mysql_gateway/templates/mysql_gateway.yml.erb
@@ -22,7 +22,7 @@ port: 33884
 cloud_controller_uri: <%= properties.cc.srv_api_uri %>
 
 service:
-  name: 'rds_mysql'
+  name: 'rds-mysql'
   unique_id: '17523a3a-44fe-4c59-a962-af6cd06e0f92'
   version: 'n/a'
   description: 'RDS MySQL by Amazon'
