rds_mysql -> rds-mysql token name in gateway job

--- a/jobs/rds_mysql_gateway/templates/mysql_gateway.yml.erb
+++ b/jobs/rds_mysql_gateway/templates/mysql_gateway.yml.erb
@@ -69,7 +69,7 @@ uaa_client_auth_credentials:
   username: <%= properties.uaa_client_auth_credentials.username %>
   password: "<%= properties.uaa_client_auth_credentials.password %>"
 service_auth_tokens:
-  rds_mysql_aws: "<%= gateway.token %>"
+  rds-mysql_aws: "<%= gateway.token %>"
 
 token: "<%= gateway.token %>"
 logging:
