--- a/templates/cf-aws-template.yml.erb
+++ b/templates/cf-aws-template.yml.erb
@@ -89,7 +89,7 @@ jobs:
       username: <%= services_userid || "services" %>
       password: <%= services_password || random_string(12, :services) %>
     rds_mysql_gateway:
-      token: rds-mysql-token
+      token: <%= find("properties.rds_mysql_gateway.token") %>
       cc_api_version: v2
       check_orphan_interval: 7200
 
