--- a/jobs/mysql_gateway/templates/mysql_gateway.yml.erb
+++ b/jobs/mysql_gateway/templates/mysql_gateway.yml.erb
@@ -1,7 +1,8 @@
 ---
 <%
-service = "rds_mysql"
+service = "mysql"
 gateway = eval("properties.#{service}_gateway")
+acls = gateway.acls
 plan_mgmt = properties.service_plans.send(service.to_sym)
 supported_plans = properties.supported_plans
 if supported_plans
@@ -9,6 +10,9 @@ if supported_plans
 else
   plan_mgmt.instance_eval("def fields; @table.keys; end;") if plan_mgmt
 end
+supported_versions = gateway.supported_versions
+version_aliases = gateway.version_aliases
+version_aliases.instance_eval("def fields; @table.keys; end;") if version_aliases
 nats_props_name = properties.nats_props || "nats"
 nats_props = properties.send(nats_props_name)
 nats = "nats://#{nats_props.user}:#{nats_props.password}@#{nats_props.address}:#{nats_props.port}"
@@ -17,24 +21,22 @@ cc_api_version = gateway.cc_api_version || "v1"
 %>
 index: <%= spec.index %>
 mbus: <%= nats %>
-port: 33884
+
 cloud_controller_uri: <%= properties.cc.srv_api_uri %>
 
 service:
-  name: 'rds-mysql'
-  unique_id: '17523a3a-44fe-4c59-a962-af6cd06e0f92'
-  version: 'n/a'
-  description: 'RDS MySQL by Amazon'
-  provider: aws
-  provider_name: 'AWS'
-  logo_url: 'https://s3.amazonaws.com/cf-core-service-assets/mysql_aws_rds.png'
-  blurb: 'Amazon MySQL Relational Database Service'
+  name: mysql
+  unique_id: "92a06847-9446-407f-8aaa-a6f20c1d2cdc"
+  version: "5.5"
+  description: 'MySQL database'
+  provider: core
+  provider_name: 'Core'
   plans:
   <% for plan in plan_mgmt.fields.each %>
     <% plan_info = plan_mgmt.send(plan.to_sym) %>
     <% plan_description = plan_info.description || "#{plan} plan" %>
-    <% plan_free_flag   = plan_info.free %>
     <% extra            = plan_info.extra %>
+    <% plan_free_flag   = plan_info.free %>
     <% unique_id        = plan_info.unique_id %>
     <%= "'#{plan}':" %>
       unique_id: <%= "'#{unique_id}'" %>
@@ -44,14 +46,36 @@ service:
   <% end %>
   default_plan: '<%= gateway.default_plan || 'free' %>'
   cf_plan_id:
-<% if plan_mgmt %>
 <% plan_mgmt.fields.each do |pf| %>
     <%= "'#{pf}': #{plan_mgmt.send(pf).configuration.cf_plan_id}" %>
-<% end %>
-<% end %>
+<% end if plan_mgmt %>
   tags: ['relational']
-  timeout: <%= properties.rds_mysql_gateway.service_timeout || 10 %>
-  version_aliases: {}
+  timeout: <%= properties.mysql_gateway.service_timeout || 10 %>
+<% if acls %>
+  <% if acls.is_a? String %>
+  acls: <%= acls %>
+  <% else %>
+    <% acls.plans.instance_eval("def fields; @table.keys; end;") if acls && acls.plans %>
+  acls:
+    <%= "users: ['#{acls.users.join("', '")}']" if acls.users %>
+    <%= "wildcards: ['#{acls.wildcards.join("', '")}']" if acls.wildcards %>
+    <% if acls.plans %>
+    plans:
+      <% acls.plans.fields.each do |plan|%>
+      <%= "#{plan}:"%>
+        <%= "users: ['#{acls.plans.send(plan.to_sym).users.join("', '")}']" if acls.plans.send(plan.to_sym).users %>
+        <%= "wildcards: ['#{acls.plans.send(plan.to_sym).wildcards.join("', '")}']" if acls.plans.send(plan.to_sym).wildcards %>
+      <% end %>
+    <% end %>
+  <% end %>
+<% end %>
+  supported_versions: <%= "['#{supported_versions.join("' , '")}']" %>
+<% if version_aliases && !version_aliases.fields.empty? %>
+  version_aliases:
+  <% for version_alias in version_aliases.fields.each %>
+    <%= "'#{version_alias}': '#{version_aliases.send(version_alias.to_sym)}'" %>
+  <% end %>
+<% end %>
 
 <% if gateway.ip_route %>
 ip_route: <%= gateway.ip_route %>
@@ -59,31 +83,42 @@ ip_route: <%= gateway.ip_route %>
 
 cc_api_version: <%= cc_api_version %>
 
-gateway_name: "RDS Mysql Gateway"
+<% if cc_api_version == "v2" %>
+gateway_name: "Mysql (Core) Gateway"
 uaa_client_id: <%= properties.uaa_client_id || "vmc" %>
 uaa_endpoint: <%= properties.uaa_endpoint %>
 uaa_client_auth_credentials:
   username: <%= properties.uaa_client_auth_credentials.username %>
   password: "<%= properties.uaa_client_auth_credentials.password %>"
 service_auth_tokens:
-  rds-mysql_aws: "<%= gateway.token %>"
+  mysql_core: "<%= gateway.token %>"
+<% end %>
 
 token: "<%= gateway.token %>"
 logging:
-  file: /var/vcap/sys/log/rds_mysql_gateway/mysql_gateway.log
+  file: /var/vcap/sys/log/mysql_gateway/mysql_gateway.log
   level: debug
   <% if properties.syslog_aggregator %>
-  syslog: vcap.rds_mysql_gateway
+  syslog: vcap.mysql_gateway
   <% end %>
 
 
 node_timeout: <%= gateway.node_timeout || 8 %>
 
-pid: /var/vcap/sys/run/rds_mysql_gateway/mysql_gateway.pid
+pid: /var/vcap/sys/run/mysql_gateway/mysql_gateway.pid
 z_interval: <%= gateway.z_interval || 30 %>
 check_orphan_interval: <%= gateway.check_orphan_interval || -1 %>
 double_check_orphan_interval: <%= gateway.double_check_orphan_interval || 300 %>
 max_nats_payload: <%= nats_props.max_payload || 1048576 %>
+<% if lifecycle and lifecycle.resque %>
+resque:
+  host: <%= lifecycle.resque.host %>
+  port: <%= lifecycle.resque.port %>
+  password: "<%= lifecycle.resque.password %>"
+  expire: <%= lifecycle.resque.expire %>
+download_url_template: "http://<%= lifecycle.download_url %>/serialized/%{service}/%{name}/snapshots/%{snapshot_id}?token=%{token}"
+<% end %>
+
 plan_management:
   plans:
 <% plan_mgmt.fields.each do |pf| %>
