Scope node-specific config under job name in manifest
Move mysql_node config under properties.mysql_node in the manifest
Move mysql_node_external config under properties.mysql_node_external in the manifest

Also remove "free" as the default plan for these two jobs

[#52259065, #52428907]

--- a/jobs/mysql_node/templates/my.cnf.erb
+++ b/jobs/mysql_node/templates/my.cnf.erb
@@ -1,7 +1,7 @@
 <%
 service = "mysql"
 plan_enabled = properties.service_plans && properties.service_plans.send(service.to_sym)
-plan = properties.plan || "free"
+plan = properties.mysql_node.plan
 plan_conf = plan_enabled && properties.service_plans.send(service.to_sym).send(plan.to_sym).configuration
 warden = plan_conf.warden
 use_warden = warden && warden.enable
