--- a/jobs/mysql_node/templates/my55.shutdown.erb
+++ b/jobs/mysql_node/templates/my55.shutdown.erb
@@ -1,7 +1,7 @@
 <%
 service = "mysql"
 plan_enabled = properties.service_plans && properties.service_plans.send(service.to_sym)
-plan = properties.plan || "free"
+plan = properties.mysql_node.plan
 plan_conf = plan_enabled && properties.service_plans.send(service.to_sym).send(plan.to_sym).configuration
 base_folder = '/var/vcap/sys/run/mysqld'
 warden = plan_conf.warden
