--- a/jobs/mysql_node/templates/mysql_backup.cron.erb
+++ b/jobs/mysql_node/templates/mysql_backup.cron.erb
@@ -4,7 +4,7 @@ cron_time = "0 1 * * *"
 interval = 5
 
 plan_enabled = properties.service_plans && properties.service_plans.send(service.to_sym)
-plan = properties.plan || "free"
+plan = properties.mysql_node.plan
 plan_conf = plan_enabled && properties.service_plans.send(service.to_sym).send(plan.to_sym).configuration
 backup_enabled = plan_enabled && plan_conf.backup && plan_conf.backup.enable
 if backup_enabled
