--- a/jobs/mysql_node/templates/mysql_worker.yml.erb
+++ b/jobs/mysql_node/templates/mysql_worker.yml.erb
@@ -2,7 +2,7 @@
 <%
 service = "mysql"
 plan_enabled = properties.service_plans && properties.service_plans.send(service.to_sym)
-plan = properties.plan || "free"
+plan = properties.mysql_node.plan
 plan_conf = plan_enabled && properties.service_plans.send(service.to_sym).send(plan.to_sym).configuration
 lifecycle = properties.service_lifecycle
 warden = plan_conf.warden
