added mysql to rds_mysql_gateway tags
[Finishes #49625239]

--- a/jobs/rds_mysql_gateway/templates/mysql_gateway.yml.erb
+++ b/jobs/rds_mysql_gateway/templates/mysql_gateway.yml.erb
@@ -49,7 +49,7 @@ service:
     <%= "'#{pf}': #{plan_mgmt.send(pf).configuration.cf_plan_id}" %>
 <% end %>
 <% end %>
-  tags: ['relational']
+  tags: ['relational','mysql']
   timeout: <%= properties.rds_mysql_gateway.service_timeout || 10 %>
   version_aliases: {}
 
