host for cc url should be api instead of ccng

--- a/templates/cf-services-release-template.yml.erb
+++ b/templates/cf-services-release-template.yml.erb
@@ -125,7 +125,7 @@ properties:
     services: services1
 
   cc: &cc
-    srv_api_uri: https://ccng.<%= find("properties.system_domain") %>
+    srv_api_uri: https://api.<%= find("properties.system_domain") %>
 
   syslog_aggregator:
     address: 10.10.16.10
