Use new stemcell name - bosh-aws-xen-ubuntu.
Signed-off-by: Dmitriy Kalinin <dmitriy@pivotallabs.com>

--- a/templates/cf-aws-template.yml.erb
+++ b/templates/cf-aws-template.yml.erb
@@ -53,7 +53,7 @@ resource_pools:
   network: services1
   size: 2
   stemcell:
-    name: bosh-stemcell
+    name: bosh-aws-xen-ubuntu
     version: latest
   cloud_properties:
     instance_type: m1.small
