--- a/templates/cf-services-release-template.yml.erb
+++ b/templates/cf-services-release-template.yml.erb
@@ -58,7 +58,7 @@ resource_pools:
   network: services1
   size: 3
   stemcell:
-    name: bosh-stemcell
+    name: bosh-aws-xen-ubuntu
     version: latest
   cloud_properties:
     instance_type: m1.small
