--- a/jobs/mysql_gateway/templates/mysql_gateway.yml.erb
+++ b/jobs/mysql_gateway/templates/mysql_gateway.yml.erb
@@ -22,6 +22,9 @@ cc_api_version = gateway.cc_api_version || "v1"
 index: <%= spec.index %>
 mbus: <%= nats %>
 
+heartbeat_interval: <%= gateway.heartbeat_interval || '~' %>
+provision_delay: <%= gateway.provision_delay || 0 %>
+
 cloud_controller_uri: <%= properties.cc.srv_api_uri %>
 
 service:
@@ -50,7 +53,7 @@ service:
     <%= "'#{pf}': #{plan_mgmt.send(pf).configuration.cf_plan_id}" %>
 <% end if plan_mgmt %>
   tags: ['mysql','relational']
-  timeout: <%= properties.mysql_gateway.service_timeout || 10 %>
+  timeout: <%= gateway.service_timeout || 10 %>
 <% if acls %>
   <% if acls.is_a? String %>
   acls: <%= acls %>
