--- a/jobs/mysql_node/templates/mysql_node.yml.erb
+++ b/jobs/mysql_node/templates/mysql_node.yml.erb
@@ -1,6 +1,6 @@
 ---
 <%
-service = "mysql"
+service = properties.mysql_service.name
 plan_enabled = properties.service_plans && properties.service_plans.send(service.to_sym)
 plan = properties.mysql_node.plan
 plan_conf = plan_enabled && properties.service_plans.send(service.to_sym).send(plan.to_sym).configuration
